# agentic-graphs

./: .gitignore  LICENSE  PUBLISHING.md  PUBLISH_CHECKLIST.md  README.md  USAGE.md  debug_session.py  graph_viz.py  litert_agent.py  multi_agent_demo.py  openai_math_agent.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
blog/: Blog1.md
docs/: ARCHITECTURE.md  PAPER.md  README.md
graph/: core.py
src/agentic_graphs/: __init__.py
src/agentic_graphs/agent/: __init__.py  base.py  defaults.py  litert.py  scheduler.py
src/agentic_graphs/core/: __init__.py  falkordb_backend.py  graph.py  tool.py
src/agentic_graphs/examples/: __init__.py  agentic_memory_demo.py  chat_session.py  debug_session.py  deep_memory_test.py  litert_math_agent.py  math_agent.py  multi_agent_demo.py  research_agent.py  skill_learning_demo.py
src/agentic_graphs/llm/: __init__.py  anthropic.py  azureopenai.py  base.py  gemini.py  groq.py  litert.py  ollama.py  openai.py
src/agentic_graphs/session/: __init__.py  models.py  session.py  store.py
