[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-graphs"
version = "0.2.2"
description = "Graph-native framework for building AI agents with FalkorDB persistence"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Agentic Graphs Contributors"},
]
keywords = ["agents", "graphs", "ai", "falkordb", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "falkordb>=1.0.0",
    "openai>=1.0.0",
]

[project.urls]
Repository = "https://github.com/fab679/agentic-graphs"
Documentation = "https://github.com/fab679/agentic-graphs#readme"
BugTracker = "https://github.com/fab679/agentic-graphs/issues"

[project.optional-dependencies]
anthropic  = ["anthropic>=0.40.0"]
gemini     = ["google-generativeai>=0.8.0"]
groq       = ["groq>=0.9.0"]
ollama     = ["httpx>=0.27.0"]
litert     = ["litert-lm>=0.11.0", "litert-lm-api-nightly>=0.11.0.dev20260422"]
dev        = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.0.292",
]
all        = [
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "groq>=0.9.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_graphs"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.0.292",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
